@@ -56,25 +56,29 @@ class ModuleTestCase(test_framework.CoopTestCase):
             covered_elements=[{
                     'party': party_father,
                     'options': [{
-                            'start_date': datetime.date(2014, 1, 1)
+                            'start_date': datetime.date(2014, 1, 1),
+                            'status': 'active'
                             }],
                     'sub_covered_elements': [],
                     }, {
                     'party': party_mother,
                     'options': [{
-                            'start_date': datetime.date(2014, 1, 1)
+                            'start_date': datetime.date(2014, 1, 1),
+                            'status': 'active'
                             }],
                     'sub_covered_elements': [],
                     }, {
                     'party': party_child1,
                     'options': [{
-                            'start_date': datetime.date(2014, 1, 1)
+                            'start_date': datetime.date(2014, 1, 1),
+                            'status': 'active'
                             }],
                     'sub_covered_elements': [],
                     }, {
                     'party': party_child2,
                     'options': [{
                             'start_date': datetime.date(2014, 1, 1),
+                            'status': 'active',
                             'end_date': datetime.date(2014, 1, 31)}],
                     'sub_covered_elements': [],
                     }])
