@@ -1,3 +1,5 @@
+* remove_option endorsement allows to void an option
+
 Version 1.4 - 2015-05-29
 * Add remove_option endorsement
 
